monitoria/mac323/4-2-33/grades/Leonardo-Benicio_190833_assignsubmission_file_8536110-WE.4.2.33.txt

WWWWWWWWWWWWWWWWWWWWWWWWWW
CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
26 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
DirectedDFS.java:105: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
1 error
RMMM

real	0m0.237s
user	0m0.280s
sys	0m0.044s
RMM

real	0m0.224s
user	0m0.272s
sys	0m0.044s
RMMMM

real	0m0.535s
user	0m1.208s
sys	0m0.144s
RMMMMMMM

real	0m3.081s
user	0m6.540s
sys	0m0.496s
RMMMMM

real	0m0.349s
user	0m0.652s
sys	0m0.076s
====== 000_case =========
wrong answer 1st lines differ - expected: 'cobre cobra', found: ''
Resposta Errada
====== 001_case =========
wrong answer 1st lines differ - expected: '2', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 002_case =========
wrong answer 1st lines differ - expected: '0', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 003_case =========
wrong answer 1st lines differ - expected: '1', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 100_case =========
wrong answer 1st lines differ - expected: 'aa a', found: ''
Resposta Errada
====== 101_case =========
wrong answer 1st lines differ - expected: '1', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 102_case =========
wrong answer 1st lines differ - expected: '0', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 200_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 201_case =========
wrong answer 1st lines differ - expected: '1474', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 202_case =========
wrong answer 1st lines differ - expected: '235229', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 203_case =========
wrong answer 1st lines differ - expected: '84', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 204_case =========
wrong answer 1st lines differ - expected: '240', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 300_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 301_case =========
wrong answer 1st lines differ - expected: '1', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 302_case =========
wrong answer 1st lines differ - expected: '6', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 303_case =========
wrong answer 1st lines differ - expected: '1964', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 304_case =========
wrong answer 1st lines differ - expected: '398394', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 305_case =========
wrong answer 1st lines differ - expected: '1398768', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 306_case =========
wrong answer 1st lines differ - expected: '923340550', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 307_case =========
wrong answer 1st lines differ - expected: '114495854014092500', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 400_case =========
wrong answer 1st lines differ - expected: 'c a', found: ''
Resposta Errada
====== 401_case =========
wrong answer 1st lines differ - expected: '803469022129495137770981046170581301261101496891396417650688', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 402_case =========
wrong answer 1st lines differ - expected: '340282366920938463463374607431768211456', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 403_case =========
wrong answer 1st lines differ - expected: '452312848583266388373324160190...7600158453279131187530910662656', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 404_case =========
wrong answer 1st lines differ - expected: '706233516069713018417604833508...6082073593257084545458595954688', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 405_case =========
wrong answer 1st lines differ - expected: '216164294552797813644468298334...4074980640712723296570197409792', found: 'FALHA NA MONTAGEM'
Resposta Errada
